# kratos

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  meson.build  requirements.txt  requirements_integration_test.txt
app/gtk/: CMakeLists.txt  main.cpp
doc/: architecture.md  datamodel.md  mqttengine.md  protocol_spec.md  web_api_spec.md
doc/dot/: architecture.dot  mqtt_simple_publish.dot
frontend/cli/: main.cpp  meson.build
frontend/qt/: main.cpp  meson.build  myclass.hpp  table.hpp
frontend/qt/qml/: HeaderTable.qml  KratosCompetitorView.qml  KratosConfigView.qml  KratosMenuBar.qml  KratosToolBar.qml  MutableHeaderTableModel.hpp  main.qml
integration_test/: README.md  requirements.txt  run_tests.py
integration_test/python/: KratosLib.py  KratosWsLib.py
integration_test/tests/: __init__.robot
kratos/: __main__.py
kratos/button/: __init__.py  button.py  tkbutton.py
kratos/datatype/: __init__.py  ints.py
kratos/example/: __init__.py  example.py
kratos/gui/: __init__.py  platform_view.qml  platformscreen.py  screen.py
kratos/mqttengine/: __init__.py  __mqttengine.py  exceptions.py  mqttengine.py  mqttengineconfig.py  mqttstreamhandler.py
kratos/sql/: __init__.py  client.py  joinedtableview.py  tableview.py  test_sql.py  util.py
kratos/unit/: debugsub.py  judge.py  platform.py
kratos/util/: __init__.py  test_timer.py  test_util.py  timer.py  util.py
resources/: kratos.ui
script/: build_dot.py  covrc  pylintrc  requirements.txt  run_mosquitto.sh  run_postgresql.sh  run_psql.sh  run_pylint.py  run_pytest.py  run_robot.py
(+56 files in other folders)
